--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Linespace Internet: Domain Names, Web Hosting, Business-Grade Email, Website Builder, SSL Certificates, Servers, Website Security, and Managed WordPress.</title>
+  <title>Linespace - Reliable solutions for complex organization challenges.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,7 +42,7 @@
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@linespaceinternet.com">info@linespaceinternet.com</a></i>
+        <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></i>
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>+(268) 7600-0000</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
@@ -97,11 +97,11 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>Welcome to <span>Linespace</span></h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
+      <h1>Welcome to <span>Linespace</span>.</h1>
+      <h2>Tailored software solutions for both you and your organization.</h2>
       <div class="d-flex">
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
-        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+        <a href="#contact" class="btn-get-started scrollto">Contact us</a>
+        <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
       </div>
     </div>
   </section><!-- End Hero -->
@@ -963,7 +963,7 @@
             <h3>Linespace<span>.</span></h3>
             <p>
               <strong>Phone:</strong> +(268) 7600-0000<br>
-              <strong>Email:</strong> info@linespaceinternet.com<br>
+              <strong>Email:</strong> info@linespacesoftware.com<br>
             </p>
           </div>
 
@@ -1007,14 +1007,14 @@
 
     <div class="container py-4">
       <div class="copyright">
-        Copyright &copy; 2024 <span>Linespace Internet</span>. All Rights Reserved.
+        Copyright &copy; 2024 <span>Linespace</span>. All Rights Reserved.
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bizland-bootstrap-business-template/ -->
-        Built with 	&#9829; by <a href="https://linespaceinternet.com/">Linespace Internet</a>.
+        Built with 	&#9829; by <a href="https://linespacesoftware.com/">Linespace</a>.
       </div>
     </div>
   </footer><!-- End Footer -->
