--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Linespace - Reliable solutions for complex organization challenges.</title>
+  <title>Linespace Software - Reliable solutions for complex organization challenges.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -26,14 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: BizLand
-  * Template URL: https://bootstrapmade.com/bizland-bootstrap-business-template/
-  * Updated: Mar 17 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -59,7 +51,6 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="index.html">Linespace<span>.</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
       <nav id="navbar" class="navbar">
@@ -98,7 +89,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <h1>Welcome to <span>Linespace</span>.</h1>
-      <h2>Tailored software solutions for both you and your organization.</h2>
+      <h2>Reliable solutions for complex organization challenges.</h2>
       <div class="d-flex">
         <a href="#contact" class="btn-get-started scrollto">Contact us</a>
         <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
@@ -198,7 +189,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills">
+    <!-- <section id="skills" class="skills">
       <div class="container" data-aos="fade-up">
 
         <div class="row skills-content">
@@ -256,7 +247,8 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section> -->
+    <!-- End Skills Section -->
 
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts">
@@ -367,7 +359,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4><a href="">Business-Grade Email</a></h4>
-              <p>Our worry-free email solution.</p>
+              <p>Our worry-free email solution.Our worry-free email solution. Our worry-free email solution.</p>
             </div>
           </div>
 
@@ -375,7 +367,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4><a href="">Website Builder</a></h4>
-              <p>A DIY solution for you or your business.</p>
+              <p>A DIY solution for you or your business.A DIY solution for you or your business.A DIY solution for you or your business.</p>
             </div>
           </div>
 
@@ -1007,7 +999,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        Copyright &copy; 2024 <span>Linespace</span>. All Rights Reserved.
+        Copyright &copy; 2024 <span>Linespace Software</span>. All Rights Reserved.
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
