[ADD] Pricing fix

--- a/index.html
+++ b/index.html
@@ -709,14 +709,18 @@
 
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="box">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <span class="advanced">Advanced</span>
+              <h3>Business Elite</h3>
+              <h4><sup>SZL</sup>1,776 <span> / month <br />Billed Annually</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Unlimited storage space</li>
+                <li>Free domain for 1 year</li>
+                <li>Payment tools</li>
+                <li>eCommerce</li>
+                <li>Bookings platform</li>
+                <li>Ticket and events management</li>
+                <li>Restuarent management</li>
+                <li>Hotel management</li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
@@ -727,13 +731,16 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
               <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h4><sup>SZL</sup>850<span> / month <br />Billed Annually</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>100GB storage space</li>
+                <li>Free domain for 1 year</li>
+                <li>Payment tools</li>
+                <li>eCommerce (Limited)</li>
+                <li>Bookings platform</li>
+                <li>Ticket and events management</li>
+                <li>Restuarent management</li>
+                <li>Hotel management</li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
@@ -743,14 +750,17 @@
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h3>Core</h3>
+              <h4><sup>SZL</sup>425<span> / month <br />Billed Annually</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>50GB storage space</li>
+                <li>Free domain for 1 year</li>
+                <li>Payment tools</li>
+                <li>eCommerce (Limited)</li>
+                <li>Bookings platform</li>
+                <li>Ticket and events management</li>
+                <li>Restuarent management</li>
+                <li>Hotel management</li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
@@ -760,15 +770,18 @@
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
             <div class="box">
-              <span class="advanced">Advanced</span>
-              <h3>Ultimate</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
+
+              <h3>Lite</h3>
+              <h4><sup>SZL</sup>203<span> / month <br />Billed Annually</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>2GB storage space</li>
+                <li>Free domain for 1 year</li>
+                <li class="na">Payment tools</li>
+                <li class="na">eCommerce (Limited)</li>
+                <li class="na">Bookings platform</li>
+                <li class="na">Ticket and events management</li>
+                <li class="na">Restuarent management</li>
+                <li class="na">Hotel management</li>
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
