--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
     </section>End Team Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <!-- <section id="pricing" class="pricing">
+    <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -792,7 +792,8 @@
         </div>
 
       </div>
-    </section>End Pricing Section -->
+    </section>
+    <!-- End Pricing Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq section-bg">
