[ADD] New services section

--- a/index.html
+++ b/index.html
@@ -106,34 +106,42 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4 class="title"><a href="">Hosting</a></h4>
+              <p class="description">Our web hosting services provide everything you need, including shared and dedicated hosting, domain registration, SSL certificates, email hosting, backups, advanced security, a global CDN, website builders, and 24/7 support.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4 class="title"><a href="">Website Builder</a></h4>
+              <p class="description">Our web builder offers intuitive drag-and-drop tools, pre-designed templates, custom domain integration, SEO optimization, mobile responsiveness, e-commerce functionality, and 24/7 support to help you create a stunning website effortlessly.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4 class="title"><a href="">Business-grade Email</a></h4>
+              <p class="description">Our business-grade email provides secure, professional email addresses, ample storage, spam and virus protection, calendar integration, mobile access, and 24/7 support to ensure seamless communication.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4 class="title"><a href="">SSL Certificates</a></h4>
+              <p class="description">Our SSL certificates offer robust encryption, enhance website security, boost SEO rankings, ensure data integrity, enable HTTPS, and provide customer trust with easy installation and 24/7 support.</p>
             </div>
           </div>
+<!-- 
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="">Servers</a></h4>
+              <p class="description">Our servers offer high performance, scalability, robust security, reliable uptime, flexible configurations, and 24/7 support to meet all your business needs.</p>
+            </div>
+          </div> -->
 
         </div>
 
