--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">Hosting</a></h4>
-              <p class="description">Our web hosting services provide everything you need, including shared and dedicated hosting, domain registration, SSL certificates, email hosting, backups, advanced security, a global CDN, website builders, and 24/7 support.</p>
+              <p class="description">We provide everything you need, including shared and dedicated hosting, domain registration, SSL certificates, email hosting, backups, advanced security, a global CDN, website builders, and 24/7 support.</p>
             </div>
           </div>
 
@@ -115,7 +115,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Website Builder</a></h4>
-              <p class="description">Our web builder offers intuitive drag-and-drop tools, pre-designed templates, custom domain integration, SEO optimization, mobile responsiveness, e-commerce functionality, and 24/7 support to help you create a stunning website effortlessly.</p>
+              <p class="description">Intuitive drag-and-drop tools, pre-designed templates, custom domain integration, SEO optimization, mobile responsiveness, e-commerce functionality, and 24/7 support to help you create a stunning website effortlessly.</p>
             </div>
           </div>
 
@@ -123,7 +123,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Business-grade Email</a></h4>
-              <p class="description">Our business-grade email provides secure, professional email addresses, ample storage, spam and virus protection, calendar integration, mobile access, and 24/7 support to ensure seamless communication.</p>
+              <p class="description">Secure, professional email addresses, ample storage, spam and virus protection, calendar integration, mobile access, and 24/7 support to ensure seamless communication.</p>
             </div>
           </div>
 
@@ -131,7 +131,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">SSL Certificates</a></h4>
-              <p class="description">Our SSL certificates offer robust encryption, enhance website security, boost SEO rankings, ensure data integrity, enable HTTPS, and provide customer trust with easy installation and 24/7 support.</p>
+              <p class="description">We offer SSL certificates with robust encryption, enhance website security, boost SEO rankings, ensure data integrity, enable HTTPS, and provide customer trust with easy installation and 24/7 support.</p>
             </div>
           </div>
 <!-- 
@@ -155,14 +155,21 @@
         <div class="section-title">
           <h2>About</h2>
           <h3>Find Out More <span>About Us</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>We offer reliable solutions for complex organization challenges</p>
         </div>
+        <div class="section-about-us p">
+          <p>We specialize in delivering innovative software solutions that drive business success. With a deep understanding of the evolving technological landscape, our mission is to provide cutting-edge software services tailored to meet the unique needs of our clients, from startups to global enterprises.</p>
+          <p>Our extensive range of software solutions includes web hosting, robust security features, intuitive website builders, business-grade email, SSL certificates, and comprehensive server management. We leverage the latest technologies to ensure our software is scalable, reliable, and secure, enabling businesses to operate efficiently and effectively in the digital age.</p>
+          <p>What distinguishes us is our unwavering commitment to quality and customer satisfaction. Our team of expert developers and IT professionals work around the clock to provide exceptional support and ensure that our software solutions deliver optimal performance. We prioritize security, performance, and user experience, ensuring that our clients can focus on their core business objectives without worrying about their IT infrastructure.
+          </p>
+          <p>We believe in forging strong, lasting partnerships with our clients, offering personalized service and solutions that adapt to their growing needs. Trust us to be your dependable partner in navigating the complexities of the digital world, delivering the software and support you need to succeed.</p>
 
-        <div class="row">
+        </div>
+        <!-- <div class="row">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="#" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+          <div class="content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -190,7 +197,7 @@
               culpa qui officia deserunt mollit anim id est laborum
             </p>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End About Section -->
@@ -996,11 +1003,13 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Domain Names</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Hosting</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Business-Grade Email</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Website Builder</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Servers</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Website Security</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Managed WordPress</a></li>
             </ul>
           </div>
 
