--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+(268) 7600-0000</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 672-336-1171</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -822,7 +822,7 @@
           <h3><span>Contact Us</span></h3>
           <p></p>
         </div>
-
+<!-- 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-6">
             <div class="info-box mb-4">
@@ -830,13 +830,13 @@
               <h3>Our Address</h3>
               <p>A108 Adam Street, New York, NY 535022</p>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6">
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
-              <p>contact@example.com</p>
+              <p>info@linespacesoftware.com</p>
             </div>
           </div>
 
@@ -844,7 +844,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
-              <p>+1 5589 55488 55</p>
+              <p>+1 672-336-1171</p>
             </div>
           </div>
 
@@ -852,9 +852,9 @@
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-6 ">
+          <!-- <div class="col-lg-6 ">
             <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
-          </div>
+          </div> -->
 
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
@@ -912,7 +912,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Linespace<span>.</span></h3>
             <p>
-              <strong>Phone:</strong> +(268) 7600-0000<br>
+              <strong>Phone:</strong>+1 672-336-1171<br>
               <strong>Email:</strong> info@linespacesoftware.com<br>
             </p>
           </div>
