[FIX] GitHub links

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268 7683-6426</span></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268 7943-5667</span></i>
+        <!-- <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268 7683-6426</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268 7943-5667</span></i> -->
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.x.com/linespacesoftware/" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
     </div>
   </section>
@@ -57,16 +59,41 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#services"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="pages/domain_names.html">Domain Names</a></li>
-              <li><a href="pages/web_hosting.html">Web Hosting</a></li>
-              <li><a href="pages/business_grade_email.html">Business-Grade Email</a></li>
-              <li><a href="pages/website_builder.html">Website Builder</a></li>
-              <li><a href="pages/ssl_certificates.html">SSL Certificates</a></li>
-              <li><a href="pages/servers.html">Servers</a></li>
-              <li><a href="pages/website_security.html">Website Security</a></li>
-              <li><a href="pages/managed_wordpress.html">Managed Wordpress</a></li>
+              <li><a href="pages/exampad.html">Exampad</a></li>
+              <li><a href="pages/rabbit.html">Rabbit</a></li>
+            </ul>
+          </li>
+            <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li class="dropdown"><a href="#"><span>Web Development</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="pages/domain_names.html">Domain Names</a></li>
+                  <li><a href="pages/web_hosting.html">Web Hosting</a></li>
+                  <li><a href="pages/business_grade_email.html">Business-Grade Email</a></li>
+                  <li><a href="pages/website_builder.html">Website Builder</a></li>
+                  <li><a href="pages/ssl_certificates.html">SSL Certificates</a></li>
+                  <li><a href="pages/servers.html">Servers</a></li>
+                  <li><a href="pages/website_security.html">Website Security</a></li>
+                  <li><a href="pages/managed_wordpress.html">Managed Wordpress</a></li>
+                </ul>
+              </li>
+              <li class="dropdown"><a href="#"><span>Internet Marketing</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="pages/domain_names.html">Domain Names</a></li>
+                  <li><a href="pages/web_hosting.html">Web Hosting</a></li>
+                  <li><a href="pages/business_grade_email.html">Business-Grade Email</a></li>
+                  <li><a href="pages/website_builder.html">Website Builder</a></li>
+                  <li><a href="pages/ssl_certificates.html">SSL Certificates</a></li>
+                  <li><a href="pages/servers.html">Servers</a></li>
+                  <li><a href="pages/website_security.html">Website Security</a></li>
+                  <li><a href="pages/managed_wordpress.html">Managed Wordpress</a></li>
+                </ul>
+              </li>
+              <!-- <li><a href="#">Drop Down 2</a></li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li> -->
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
@@ -956,9 +983,11 @@
             <h4>Our Social Networks</h4>
             <p>Reliable solutions for complex organization challenges.</p>
             <div class="social-links mt-3">
+              <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.x.com/linespacesoftware/" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
               <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
 
@@ -971,11 +1000,6 @@
         Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved.
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bizland-bootstrap-business-template/ -->
-        Built with 	&#9829; by <a href="https://linespacesoftware.com/">Linespace</a>.
       </div>
     </div>
   </footer><!-- End Footer -->
