[ADD] Open source

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
           <li class="dropdown"><a href="#services"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="pages/exampad.html">Exampad</a></li>
-              <li><a href="pages/rabbit.html">Rabbit</a></li>
             </ul>
           </li>
             <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
@@ -94,6 +93,11 @@
               <!-- <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li> -->
+            </ul>
+          </li>
+          <li class="dropdown"><a href="#services"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="pages/rabbit.html">Rabbit</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
