[UPD] Updated nav bar

--- a/index.html
+++ b/index.html
@@ -64,35 +64,17 @@
               <li><a href="pages/exampad.html">Exampad</a></li>
             </ul>
           </li>
-            <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li class="dropdown"><a href="#"><span>Web Development</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="pages/domain_names.html">Domain Names</a></li>
-                  <li><a href="pages/web_hosting.html">Web Hosting</a></li>
-                  <li><a href="pages/business_grade_email.html">Business-Grade Email</a></li>
-                  <li><a href="pages/website_builder.html">Website Builder</a></li>
-                  <li><a href="pages/ssl_certificates.html">SSL Certificates</a></li>
-                  <li><a href="pages/servers.html">Servers</a></li>
-                  <li><a href="pages/website_security.html">Website Security</a></li>
-                  <li><a href="pages/managed_wordpress.html">Managed Wordpress</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"><a href="#"><span>Internet Marketing</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="pages/domain_names.html">Domain Names</a></li>
-                  <li><a href="pages/web_hosting.html">Web Hosting</a></li>
-                  <li><a href="pages/business_grade_email.html">Business-Grade Email</a></li>
-                  <li><a href="pages/website_builder.html">Website Builder</a></li>
-                  <li><a href="pages/ssl_certificates.html">SSL Certificates</a></li>
-                  <li><a href="pages/servers.html">Servers</a></li>
-                  <li><a href="pages/website_security.html">Website Security</a></li>
-                  <li><a href="pages/managed_wordpress.html">Managed Wordpress</a></li>
-                </ul>
-              </li>
-              <!-- <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li> -->
+              <li><a href="pages/custom_software.html">Custom Software Development</a></li>
+              <li><a href="pages/consulting_and_advisory.html">Consulting and Advisory</a></li>
+              <li><a href="pages/managed_services.html">Managed Services</a></li>
+              <li><a href="pages/data_and_analytics.html">Data and Analytics</a></li>
+              <li><a href="pages/digital_transformation.html">Digital Transformation</a></li>
+              <li><a href="pages/cybersecurity.html">Cybersecurity</a></li> 
+              <li><a href="pages/exampad.html">Training and Support</a></li> 
+              <li><a href="pages/devops_and_cloud.html">DevOps and Cloud Infrastructure</a></li> 
+              <li><a href="pages/emerging.html">Emerging Technologies</a></li> 
             </ul>
           </li>
           <li class="dropdown"><a href="#services"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
@@ -132,7 +114,7 @@
       <h1>Welcome to <span>Linespace</span></h1>
       <h2>Reliable solutions for complex organization challenges.</h2>
       <div class="d-flex">
-        <a href="#contact" class="btn-get-started scrollto">Contact us</a>
+        <a href="#contact" class="btn-get-started scrollto">Get a Free Consultation</a>
         <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
       </div>
     </div>
